--- a/converter/index.html
+++ b/converter/index.html
@@ -15,6 +15,12 @@
     <input type="number" value="0" id="width" />
     <label for="height">Height: </label>
     <input type="number" value="0" id="height" />
+    <label for="targetColor">Target Color:</label>
+    <input type="color" id="targetColor" value="#ff0000" />
+    <label for="replacementColor">Replacement Color:</label>
+    <input type="color" id="replacementColor" value="#0000ff" />
+    <label for="shouldDownload">Download?</label>
+    <input type="checkbox" id="shouldDownload" />
     <select id="outputFormat">
       <option value="jpeg">JPEG</option>
       <option value="png">PNG</option>
