feat: contrast adjustment

--- a/converter/index.html
+++ b/converter/index.html
@@ -71,7 +71,15 @@
     />
     <br />
     <br />
-
+    <input
+      type="range"
+      min="-100"
+      max="100"
+      id="contrastInput"
+      placeholder="Contrast"
+    />
+    <br />
+    <br />
     <label for="fileNameInput">Filename: </label>
     <input id="fileNameInput" type="text" />
     <label for="shouldDownload">Download?</label>
