--- a/converter/index.html
+++ b/converter/index.html
@@ -82,12 +82,7 @@
     />
     <br />
     <br />
-    <label for="fileNameInput">Filename: </label>
-    <input id="fileNameInput" type="text" />
-    <label for="shouldDownload">Download?</label>
-    <input type="checkbox" id="shouldDownload" />
-    <br />
-    <br />
+
     <select id="mergeDirection">
       <option selected="true" value="horizontal">Горизонтально</option>
       <option value="vertical">Вертикально</option>
@@ -107,11 +102,49 @@
     <input type="color" id="textColor" value="#000000" />
     <br />
     <br />
+
+    <label for="fileNameInput">Filename: </label>
+    <input id="fileNameInput" type="text" />
+    <label for="shouldDownload">Download?</label>
+    <input type="checkbox" id="shouldDownload" />
+    <br />
+    <br />
     <button id="convertButton">Convert</button>
+    <button id="play">Slideshow</button>
     <br />
 
-    <div id="downloadLink"></div>
     <canvas style="display: none" id="canvas"></canvas>
+    <br />
+    <br />
+    <div id="slideshow-container"></div>
+    <div id="downloadLink"></div>
     <script src="./script.js"></script>
   </body>
+  <style>
+    #slideshow-container {
+      width: 40%;
+      height: 40%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+
+    #slideshow-container img {
+      width: 100%;
+      height: 100%;
+      animation: fade 5s linear infinite;
+    }
+
+    @keyframes fade {
+      0%,
+      100% {
+        opacity: 0;
+      }
+      10%,
+      90% {
+        opacity: 1;
+      }
+    }
+  </style>
 </html>
